--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ajv": "^4.11.3",
     "elo-rank": "^1.0.0",
     "express": "^4.16.4",
-    "mongodb": "^2.1.7"
+    "mongodb": "^2.1.7",
+    "sinon": "^10.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
